; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/ipc/extr_mqueue.c_mqueue_fill_super.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/ipc/extr_mqueue.c_mqueue_fill_super.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32, i32*, i32, i32, i32 }
%struct.inode = type { i32 }
%struct.ipc_namespace = type { i32 }

@PAGE_CACHE_SIZE = common dso_local global i32 0, align 4
@PAGE_CACHE_SHIFT = common dso_local global i32 0, align 4
@MQUEUE_MAGIC = common dso_local global i32 0, align 4
@mqueue_super_ops = common dso_local global i32 0, align 4
@S_IFDIR = common dso_local global i32 0, align 4
@S_ISVTX = common dso_local global i32 0, align 4
@S_IRWXUGO = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.super_block*, i8*, i32)* @mqueue_fill_super to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mqueue_fill_super(%struct.super_block* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.super_block*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.inode*, align 8
  %8 = alloca %struct.ipc_namespace*, align 8
  %9 = alloca i32, align 4
  store %struct.super_block* %0, %struct.super_block** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.ipc_namespace*
  store %struct.ipc_namespace* %11, %struct.ipc_namespace** %8, align 8
  %12 = load i32, i32* @PAGE_CACHE_SIZE, align 4
  %13 = load %struct.super_block*, %struct.super_block** %4, align 8
  %14 = getelementptr inbounds %struct.super_block, %struct.super_block* %13, i32 0, i32 4
  store i32 %12, i32* %14, align 8
  %15 = load i32, i32* @PAGE_CACHE_SHIFT, align 4
  %16 = load %struct.super_block*, %struct.super_block** %4, align 8
  %17 = getelementptr inbounds %struct.super_block, %struct.super_block* %16, i32 0, i32 3
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @MQUEUE_MAGIC, align 4
  %19 = load %struct.super_block*, %struct.super_block** %4, align 8
  %20 = getelementptr inbounds %struct.super_block, %struct.super_block* %19, i32 0, i32 2
  store i32 %18, i32* %20, align 8
  %21 = load %struct.super_block*, %struct.super_block** %4, align 8
  %22 = getelementptr inbounds %struct.super_block, %struct.super_block* %21, i32 0, i32 1
  store i32* @mqueue_super_ops, i32** %22, align 8
  %23 = load %struct.super_block*, %struct.super_block** %4, align 8
  %24 = load %struct.ipc_namespace*, %struct.ipc_namespace** %8, align 8
  %25 = load i32, i32* @S_IFDIR, align 4
  %26 = load i32, i32* @S_ISVTX, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @S_IRWXUGO, align 4
  %29 = or i32 %27, %28
  %30 = call %struct.inode* @mqueue_get_inode(%struct.super_block* %23, %struct.ipc_namespace* %24, i32 %29, i32* null)
  store %struct.inode* %30, %struct.inode** %7, align 8
  %31 = load %struct.inode*, %struct.inode** %7, align 8
  %32 = icmp ne %struct.inode* %31, null
  br i1 %32, label %36, label %33

33:                                               ; preds = %3
  %34 = load i32, i32* @ENOMEM, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %9, align 4
  br label %51

36:                                               ; preds = %3
  %37 = load %struct.inode*, %struct.inode** %7, align 8
  %38 = call i32 @d_alloc_root(%struct.inode* %37)
  %39 = load %struct.super_block*, %struct.super_block** %4, align 8
  %40 = getelementptr inbounds %struct.super_block, %struct.super_block* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 8
  %41 = load %struct.super_block*, %struct.super_block** %4, align 8
  %42 = getelementptr inbounds %struct.super_block, %struct.super_block* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %50, label %45

45:                                               ; preds = %36
  %46 = load %struct.inode*, %struct.inode** %7, align 8
  %47 = call i32 @iput(%struct.inode* %46)
  %48 = load i32, i32* @ENOMEM, align 4
  %49 = sub nsw i32 0, %48
  store i32 %49, i32* %9, align 4
  br label %51

50:                                               ; preds = %36
  store i32 0, i32* %9, align 4
  br label %51

51:                                               ; preds = %50, %45, %33
  %52 = load i32, i32* %9, align 4
  ret i32 %52
}

declare dso_local %struct.inode* @mqueue_get_inode(%struct.super_block*, %struct.ipc_namespace*, i32, i32*) #1

declare dso_local i32 @d_alloc_root(%struct.inode*) #1

declare dso_local i32 @iput(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
